--- a/pom.xml
+++ b/pom.xml
@@ -23,13 +23,13 @@
         <sparkWebServer.version>2.7.2</sparkWebServer.version>
 
         <junit.version>4.12</junit.version>
-        <testcontainers.version>1.16.2</testcontainers.version>
+        <testcontainers.version>1.17.1</testcontainers.version>
         <log4j1.version>1.2.17</log4j1.version>
         <log4j2.version>2.17.0</log4j2.version>
         <slf4j.version>1.7.25</slf4j.version>
         <commons-cli.version>1.4</commons-cli.version>
         <jackson.version>2.10.1</jackson.version>
-        <zookeeper.version>3.4.14</zookeeper.version>
+        <zookeeper.version>3.8.0</zookeeper.version>
         <curator.version>4.0.1</curator.version>
         <mysql-connector.version>8.0.27</mysql-connector.version>
         <mysql-binlog-connector.version>0.16.1</mysql-binlog-connector.version>
@@ -545,7 +545,7 @@
                 <configuration>
                     <argLine>${tests.arguments}</argLine>
                     <argLine>${surefireArgLine}</argLine>
-
+                    <forkCount>0</forkCount>
                     <includes>
 		   	            <include>**/*Test.java</include>
 		   	            <include>**/*Test*.java</include>
@@ -561,7 +561,7 @@
                         </property>
                         <property>
                             <name>docker.image.mysql</name>
-                            <value>mysql:5.6.38</value>
+                            <value>mysql:5.7.34</value>
                         </property>
                     </systemProperties>
                 </configuration>
